# collaborative-real-time-editor

./: README.md
TextEditor/: Action.cpp  Action.h  CMakeLists.txt  CustomCursor.cpp  Document.cpp  Document.h  FileManager.cpp  FileManager.h  GraphicSymbol.cpp  GraphicSymbol.h  InputManager.cpp  InputManager.h  MetaDocument.cpp  MetaDocument.h  ModifiedLSEQ.cpp  ModifiedLSEQ.h  NetworkManager.cpp  NetworkManager.h  Settings.cpp  Settings.h  SharedDocument.cpp  SharedDocument.h  SocketManager.cpp  SocketManager.h  Symbol.cpp  Symbol.h  Version.cpp  Version.h  VersionController.cpp  VersionController.h  connectionsettingsdialog.cpp  connectionsettingsdialog.h  connectionsettingsdialog.ui  crdt_exception.cpp  crdt_exception.h  documentinfodialog.cpp  documentinfodialog.h  documentinfodialog.ui  main.cpp  notepad.cpp  (+12 more)
TextEditor/NetworkClasses/: CollaborationRequest.h  CollaborationResponse.h  CursorPosition.h  DeleteDocumentRequest.h  DeleteDocumentResponse.h  DocumentInfo.h  DocumentInfoRequest.h  LoginRequest.h  MessageTypes.h  NewDocumentRequest.h  NewDocumentResponse.h  SignupRequest.h  SignupResponse.h  SubscribeRequest.h  UnsubscribeRequest.h
TextEditorServer/: Action.h  CMakeLists.txt  ClientsManager.cpp  ClientsManager.h  CustomCursor.h  DBManager.cpp  DBManager.h  MainServer.cpp  MainServer.h  main.cpp
TextEditorServer/NetworkClasses/: Actions.h  CollaborationResponse.h  DeleteDocumentResponse.h  DocumentInfo.h  DocumentRequest.h  DocumentResponse.h  DocumentsRequest.h  DocumentsResponse.h  GenericMessage.h  LoginResponse.h  LogoutRequest.h  MessageTypes.h  SubscribeResponse.h
